--- a/Blockchain/runtime/Cargo.toml
+++ b/Blockchain/runtime/Cargo.toml
@@ -51,6 +51,7 @@ hex-literal = { version = "0.3.4", optional = true }
 # Local Dependencies
 pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" }
 base-nft = { version = "0.0.1", default-features = false, path = '../pallets/base-nft' }
+pallet-nft = { version = "0.0.1", default-features = false, path = '../pallets/nft' }
 
 [build-dependencies]
 substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
@@ -70,6 +71,7 @@ std = [
 	"pallet-randomness-collective-flip/std",
 	"pallet-sudo/std",
 	"pallet-template/std",
+	"pallet-nft/std",
 	"pallet-timestamp/std",
 	"pallet-transaction-payment-rpc-runtime-api/std",
 	"pallet-transaction-payment/std",
